Jun 6, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/sio.c: Fixed: 'y' and 'z' not converted to half-width.

Jun 4, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/Plugin.c: Hack-fixed the bug which causes crash when loading state
   with dynarec CPU core. A large amount of refactor is needed for a proper
   fix.
 * win32/gui/WndMain.c: Changed language code corresponding to the ones in
   source tree.
 * libpcsxcore/psxmem.c: Minor comment fix.

Jun 3, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cheat.c: Fixed endianness issue (not tested).
 * libpcsxcore/cdrom.c: Changed CDR interrupt timing value so that it behaves
   the same as old revisions. Not sure if it breaks or unbreaks anything.
 * libpcsxcore/psxbios.c: Silenced some GCC warnings.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/misc.c: Bumped savestate version.
 * libpcsxcore/ix86/iR3000A.c: Use %x instead of %lx.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * po/zh_CN.po, po/zh_TW.po: Updated ("PS" seems to be more common than "PSX"
   in Asian regions).

Jun 2, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/MemcardDlg.c: Use unsigned for currentIcon.
 * libpcsxcore/cdrom.c: Use %x instead of %lx.
 * libpcsxcore/psxbios.c: Likewise.
 * libpcsxcore/psxdma.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * gui/Makefile.am: Added -ldl.
 * plugins/dfinput/Makefile.am: Added -lX11 to cfgDFInput_LDFLAGS.

Jun 1, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/MemcardDlg.c: Fixed icon animation.
 * gui/ConfDlg.c: Minor text change.
 * win32/gui/ConfigurePlugins.c: Likewise.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po, po/ru_RU.po, po/it.po, po/pt_BR.po:
   Updated.
 * win32/pcsx.dev: Added sjisfont.h.

May 31, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxbios.c: Implemented Krom2RawAdd().
 * libpcsxcore/sjisfont.h: Added font data.
 * macosx/Pcsx.xcodeproj/project.pbxproj: Added sjisfont.h.
 * win32/pcsx.vcproj: Likewise.