@@ -1,3 +1,13 @@
+Jun 7, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * libpcsxcore/cdrom.c: Use boolean/TRUE/FALSE for where it should, don't use
+   "long" type for cdrStruct which is to be saved in savestates.
+ * libpcsxcore/cdrom.h: Likewise.
+ * libpcsxcore/misc.c: Bumped savestate version.
+ * libpcsxcore/plugins.c: Added support for CDRreadCDDA()/CDRgetTE() (not used
+   for now).
+ * libpcsxcore/plugins.h: Likewise.
+
 Jun 6, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * libpcsxcore/sio.c: Fixed: 'y' and 'z' not converted to half-width.
